# bsw-testcase

./: .env  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
bet_maker/: Dockerfile  README.md  main.py  pyproject.toml
bet_maker/api/: bets_api.py
bet_maker/core/config/: config.py
bet_maker/core/db/: connector.py
bet_maker/models/: base_model.py  bet_model.py
bet_maker/repositories/: base_respository.py  bet_repository.py
bet_maker/schemas/: base_schema.py  bet_schemas.py  event_schema.py
bet_maker/services/: bet_service.py  event_listener.py  line_provider_client.py  update_bet.py
line_provider/: Dockerfile  app.py  event_publisher.py
